tests/ui/statics/check-immutable-mut-slices.stderr
error[E0764]: mutable borrows of lifetime-extended temporaries in the top-level scope of a static are not allowed
  --> $DIR/check-immutable-mut-slices.rs:3:37
   |
LL | static TEST: &'static mut [isize] = &mut [];
   |                                     ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0764`.
